# karyon

./: .gitignore  CONTRIBUTING.md  DATASETS.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: compounding.md  qualify.md  repair.md  screen-power.md
examples/agent_loop/: README.md  repair_antibody.py  repair_dna.py  repair_mol.py
examples/compose/: README.md  demo.py  make_candidates.py  seq_demo.py
examples/reproduce/: README.md  run.py
skills/antibody-qc/: SKILL.md
skills/benchmark-leakage/: SKILL.md
skills/cofold-qc/: SKILL.md
skills/complex-qc/: SKILL.md
skills/gen-dna-qc/: SKILL.md
skills/mol-qc/: SKILL.md
skills/pose-validity/: SKILL.md
skills/promoter-design/: SKILL.md
skills/screen-qc/: SKILL.md
skills/sequence-dfm/: SKILL.md
skills/single-cell-screen-qc/: SKILL.md
src/karyon/: __init__.py  acquisition.py  (+65 more)
tests/: test_antibody_developability.py  test_cli.py  test_cofold_validity.py  test_constructive_core.py  test_contracts.py  test_crispr_qc.py  test_crispr_qc_benchmark.py  test_crispr_qc_screen.py  test_gen_dna_validity.py  test_hossain_predictor.py  test_loop.py  test_mol_qc.py  test_molnet_honesty.py  test_operator.py  test_operator_compound.py  test_perturbseq_qc.py  test_perturbseq_user_screen.py  test_pose_honesty.py  test_ppi_leakage.py  test_ppi_leakage_cli.py  test_promoter_contracts.py  test_promoter_predictor.py  test_protein_interface_validity.py  test_qualify.py  test_rbs_hollerer_predictor.py  test_rbs_predictor.py  test_repair.py  test_retro_honesty.py  test_retro_template.py  test_screen_qc.py  test_spine.py  test_validate.py
(+5 files in other folders)
